--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"express-validator": "^6.12.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.13.7",
-		"node-sass": "^6.0.1"
+		"node-sass": "^6.0.1",
+		"nodemailer": "^6.7.2"
 	},
 	"devDependencies": {
 		"concurrently": "^6.2.1",
